# api-media

./: .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yml  makefile
migrations/2022-08-09-104835_users/: up.sql
migrations/2022-08-09-104908_medias/: up.sql
migrations/2022-08-09-105546_media_token/: up.sql
migrations/2022-08-09-105939_users_token/: up.sql
migrations/2022-08-11-070201_create_tweets/: up.sql
src/: main.rs  schema.rs
src/app/: route.rs
src/app/api/: users.rs
src/app/db/: mod.rs
src/app/models/: user.rs
src/handlers/: tweets.rs
src/models/: mod.rs
