[package]
name = "api-media"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"
actix-rt = "2.7.0"
config = "0.13.1"
lazy_static = "1.4.0"
actix = "0.13"
futures = "0.3.21"
chrono = { version = "0.4.20", features = ["serde"] }
bcrypt = "0.13.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
